syntax = "proto3";

package workflow.pipeline.scm;
option go_package = "github.com/infraboard/workflow/api/pkg/scm";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

message WebHookEvent {
    // 事件类型
    string object_kind = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"object_kind" json:"object_kind" validate:"required"'}
        ];
    // 事件名称
    string event_name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"event_name" json:"event_name" validate:"required"'}
        ];
    // 关联分支
    string ref = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"ref" json:"ref" validate:"required"'}
        ];
    // 触发者用户ID
    int64 user_id = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_id" json:"user_id"'}
        ];
    // 触发者用户名称
    string user_name = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_name" json:"user_name"'}
        ]; 
    // 用户头像
    string user_avatar = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_avatar" json:"user_avatar"'}
        ];
    // 用户头像
    Project project = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"project" json:"project"'}
        ];
    // 用户头像
    repeated Commit commits = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"commits" json:"commits"'}
        ];
}

message Commit {
    // id
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"id" json:"id"'}
        ];
    // commit message
    string message = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"message" json:"message"'}
        ]; 
    // title
    string title = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"title" json:"title"'}
        ]; 
    // 文本格式时间
    string timestamp = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"timestamp" json:"timestamp"'}
        ];
    // commit对应的url
    string url = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"url" json:"url"'}
        ]; 
    // 作者
    Author author = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"author" json:"author"'}
        ];  
    // 新加的文件
    repeated string added = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"added" json:"added"'}
        ]; 
    // 修改的文件
    repeated string modified = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"modified" json:"modified"'}
        ]; 
    // 删除的文件
    repeated string removed = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"removed" json:"removed"'}
        ]; 
}

message Author {
    // 作者名称
    string name = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
        ];
    // 作者邮箱
    string email = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"email" json:"email"'}
        ];
}

message Project {
    // 项目id
    int64 id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"id" json:"id"'}
        ];
    // 描述
    string description = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description"'}
        ];
    // 名称
    string name = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
        ];
    // ssh 地址
    string git_ssh_url = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"ssh_url_to_repo" json:"ssh_url_to_repo"'}
        ];
    // http 地址
    string git_http_url = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"http_url_to_repo" json:"http_url_to_repo"'}
        ];
    // namespace
    string namespace_path = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"path_with_namespace" json:"path_with_namespace"'}
        ];
    // 是否已经同步
    bool has_synced = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"has_synced" json:"has_synced"'}
        ];
}

message ProjectSet {
    repeated Project items = 9[
        (google.protobuf.field_tag) = {struct_tag: 'json:"items"'}
        ]; 
}